Page MenuHome GnuPG

Kleopatra: write error when decrypting to network drive
Closed, ResolvedPublic

Description

We got feedback from 2 customers that when decrypting a file or archive to a network drive they get the message that it could not be written to the folder, they should choose another one.

Encryption works fine, Decryption on cli to that folder works, too.

Might be related to the fix for https://dev.gnupg.org/T6499

Details

Version
VSD 3.2.0

Event Timeline

ebo triaged this task as High priority.Jan 4 2024, 11:57 AM
ebo created this task.
ebo added subscribers: ikloecker, aheinecke.

Another hint: When they checked "write temporary files in the folder of the encrypted file" they got a message window from gpgex "Error returned by the GnuPG user interface: Input/output error".

Filesystem is NTFS, they use only NTFS permissions, share is SMB drive on a Synology NAS and encrypted by the NAS.

In a first commit, I have switched back to the simple check done by QFileInfo::isWritable() (see https://doc.qt.io/qt-5/qfileinfo.html#isWritable).

In a second commit, a temporary file is created in the output folder to check if it is writable.

I recommend to backport only the first commit to VSD 3.2 (which restores the behavior of the previous VSD version).

ikloecker changed the task status from Open to Testing.Jan 4 2024, 1:57 PM
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker moved this task from Backlog to WiP on the vsd32 board.

Works in VS-Desktop-3.1.91.9-Beta.

ebo edited projects, added vsd32 (vsd-3.2.0); removed vsd32.

moved to milestone 3.2.0, as 3.2.1 does not exist as column...

ebo lowered the priority of this task from High to Normal.Jan 5 2024, 2:29 PM
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.May 19 2025, 11:47 AM
timegrid moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.EditedMay 20 2025, 12:27 PM
timegrid added a subscriber: timegrid.

looks good to me on gpg4win-4.4.1-beta59@win10

Verify/Decrypt
Sign/Encrypt