Create temporary file to check if output folder is writable

GnuPG-bug-id: 6917